# snake3

./: CRATE_README.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/snake/: entities.rs  game.rs  macros.rs  mod.rs  random.rs  snake_obj.rs
