[package]
name = "snake3"
version = "0.1.1"
edition = "2024"
authors = ["Victor Ciurana admin@victorciurana.com"]
description = "Play the classical snake game on your terminal or use the crate to build your own."
license = "MIT"
repository = "https://github.com/ciurana-life/snake3"
homepage = "https://github.com/ciurana-life/snake3"
readme = "CRATE_README.md"
keywords = ["snake", "game"]
categories = ["game-engines"]

[dependencies]
rand = "0.9.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
getrandom = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false

[package.metadata.husky.hooks]
pre-commit = """
cargo fmt --all -- --check &&
cargo clippy --all-targets -- -D warnings
"""
